fixato problemi del menu e overflow della Navbar

--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -1,185 +1,212 @@
 
+
 /* NAVBAR */
 
 header {
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 
 nav {
-  width: 100%;
-  background-color: var(--color3);
+width: 100%;
+background-color: var(--color3);
 }
 
-
 .nav-bar {
-  width: 100%;
-  max-width: 1440px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-  position: relative;
-
-  background-color: var(--color3);
-  padding: 12px 50px;
-  margin: 0 auto;
+width: 100%;
+max-width: 1440px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+list-style: none;
+position: relative;
+background-color: var(--color3);
+padding: 12px 50px;
+margin: 0 auto;
 }
 
 .logo {
-  display: flex;
-  align-items: flex-end;
+display: flex;
+align-items: flex-end;
+
 }
 
 .logo img {
-  height: 58px;
+height: 58px;
 
-  @media(max-width: 850px){
-    height: 2rem;
-    margin-left: -30px;
-
-  @media(max-width: 425px){
-      height: 1.5rem;
-  }
-  }
 
 }
-.menu {display: flex;}
-.menu li {padding-left: 30px; display: flex; align-items: center;}
+
+@media (max-width: 850px) {
+.logo img {
+  height: 2rem;
+  margin-left: -30px;
+}
+}
+
+@media (max-width: 425px) {
+.logo img {
+  height: 1.5rem;
+}
+}
+
+.menu {
+display: flex;
+}
+
+.menu li {
+padding-left: 30px;
+display: flex;
+align-items: center;
+}
+
 .nav-link {
-  display: inline-block;
-  text-decoration: none;
-  color: var(--color2);
-  text-align: center;
-  transition: 0.15s ease-in-out;
-  position: relative;
-  text-transform: uppercase;
+display: inline-block;
+text-decoration: none;
+color: var(--color2);
+text-align: center;
+transition: 0.15s ease-in-out;
+position: relative;
+text-transform: uppercase;
 }
 
 .nav-ig {
-  display: inline-block;
-  text-decoration: none;
-  color: var(--color2);
-  text-align: center;
-  transition: 0.15s ease-in-out;
-  position: relative;
-  text-transform: uppercase;
+display: inline-block;
+text-decoration: none;
+color: var(--color2);
+text-align: center;
+transition: 0.15s ease-in-out;
+position: relative;
+text-transform: uppercase;
 }
 
 .nav-link::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  height: 1.5px;
-  background-color: var(--color2);
-  transition: 0.15s ease-in-out;
+content: "";
+position: absolute;
+bottom: 0;
+left: 0;
+width: 0;
+height: 1.5px;
+background-color: var(--color2);
+transition: 0.15s ease-in-out;
 }
-.nav-link:hover:after {width: 100%;}
-.open-menu , .close-menu {
-  position: absolute;
-  color: var(--color2);
-  cursor: pointer;
-  font-size: 1.5rem;
-  display: none;
+
+.nav-link:hover:after {
+width: 100%;
 }
-.open-menu {
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
-}
+
+.open-menu,
 .close-menu {
-  top: 20px;
-  right: 20px;
+position: absolute;
+color: var(--color2);
+cursor: pointer;
+font-size: 1.5rem;
+display: none;
 }
-#check {display: none;}
+
+.open-menu {
+top: 50%;
+right: 20px;
+transform: translateY(-50%);
+}
+
+.close-menu {
+top: 20px;
+right: 20px;
+}
+
+#check {
+display: none;
+}
 
 /* MEDIA QUERY SPECIALE x NAVBAR */
 
-@media(max-width: 850px){
-  .menu {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 80%;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      right: -100%;
-      z-index: 100;
-      background-color: var(--color1);
-      transition: all 0.2s ease-in-out;
-  }
-  .menu li {margin-top: 40px;}
-  .menu li a {padding: 10px;}
-  .open-menu , .close-menu {display: block;}
-  #check:checked ~ .menu {right: 0;}
+@media (max-width: 850px) {
+.menu {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  z-index: 100;
+  background-color: var(--color1);
+  transition: all 0.2s ease-in-out;
 }
 
+.menu li {
+  margin-top: 40px;
+}
 
+.menu li a {
+  padding: 10px;
+}
 
+.open-menu,
+.close-menu {
+  display: block;
+}
+
+#check:checked ~ .menu {
+  right: 0;
+}
+}
 
 /* HERO SECTION */
 
+.hero-section {
+display: flex;
+justify-content: center;
+background-image: url(../img/bg-hero-section.webp);
+background-repeat: no-repeat;
+width: 100%;
+height: 100vh;
+top: 60px;
+left: 0;
+right: 0;
+background-position: center center;
+position: absolute;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
+}
 
 .hero-section {
-
-    display: flex;
-    justify-content: center;
-    background-image: url(../img/bg-hero-section.webp);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
-    top: 60px;
-    left: 0;
-    right: 0;
-    background-position:center center ;
-    position: absolute;
-    
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
+display: flex;
+align-items: center;
 }
 
-
-.hero-section{
-    display: flex;
-    align-items: center;
+#hero-riquadro-giallo-esterno {
+display: flex;
+flex-direction: column;
 }
 
-#hero-riquadro-giallo-esterno{
-    display: flex;
-    flex-direction: column;
-}
-
-#hero-riquadro-giallo-interno{
-    display: flex;
-    padding: 50px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    max-width: 1200px;
-   
-    border-radius: 100px 50px;
-    background: rgba(247, 224, 166, 0.83);
-    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.6);
+#hero-riquadro-giallo-interno {
+display: flex;
+padding: 50px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+max-width: 1200px;
+border-radius: 100px 50px;
+background: rgba(247, 224, 166, 0.83);
+box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.6);
 }
 
 .contenitore-bottone {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
-
 #sottotitolo-hero {
-  padding: 0;
+padding: 0;
 }
 
 /* SEZIONE 1*/
@@ -527,7 +554,7 @@ nav {
   
     margin-top: 10px;
     width: 100%;
-    margin-left: 20%;
+
     flex-direction: column;
     max-width: 500px;
   }
@@ -541,6 +568,7 @@ nav {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    margin-left: 8%;
   }
 
  
